--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ plugins {
     id "org.jreleaser" version "1.18.0"
 }
 
-group = 'app.multiplayer'
+group = 'app.multiplayer.session_recorder'
 description = 'Multiplayer Session Recorder Java Library'
 
 if (project.hasProperty('projVersion')) {
@@ -124,7 +124,7 @@ publishing {
 }
 
 mavenPublishing {
-    // coordinates("app.multiplayer", "opentelemetry", "0.0.1")
+    // coordinates("app.multiplayer.session_recorder", "session_recorder", "0.0.1")
 
     pom {
         name = 'Multiplayer Session Recorder Exporter'
